--- a/Projeto/constructors2021.html
+++ b/Projeto/constructors2021.html
@@ -58,11 +58,12 @@
     <div class = "filler"style="width:100%;height:100px"></div>
     <div class = "container">
     <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class = "image-box row-cols-md-6" style="width:100%;height:50px">OLA</div>
         <div class="col">
             <div class="card" >
-              <img src="Images/mercedes logo.jpg" class= "mercedes" alt="...">
+              <img src="Images/mercedes logo.jpg"class="card-img-top" alt="..." >
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Mercedes</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
@@ -71,7 +72,7 @@
             <div class="card">
               <img src="Images/redbull logo.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Redbull</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
@@ -80,7 +81,7 @@
             <div class="card">
               <img src="Images/ferrari logo.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Ferrari</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
@@ -89,7 +90,7 @@
             <div class="card">
               <img src="Images/mclaren logo.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Mclaren</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
@@ -98,7 +99,7 @@
             <div class="card">
               <img src="Images/alpine logo.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Alpine</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
@@ -107,7 +108,7 @@
             <div class="card">
               <img src="Images/alphatauri log.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Alphatauri</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
@@ -116,7 +117,7 @@
             <div class="card">
               <img src="Images/aston martin logo.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Aston Martin</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
@@ -125,7 +126,7 @@
             <div class="card">
               <img src="Images/williams logo.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Williams Racing</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
@@ -134,16 +135,16 @@
             <div class="card">
               <img src="Images/alfa romeo logo.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Alfa Romeo</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card">
-              <img src="Images/williams logo.jpg" class="card-img-top" alt="...">
+              <img src="Images/haas f1 logo.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Haas F1</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
