--- a/Projeto/driverdetailsv2.html
+++ b/Projeto/driverdetailsv2.html
@@ -56,7 +56,7 @@
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                   <li class="breadcrumb-item"><a href="drivers.html">Drivers List</a></li>
-                  <li class="breadcrumb-item active" aria-current="page" data-bind="text: Name"></li></li>
+                  <li class="breadcrumb-item active" aria-current="page" data-bind="text: Name"></li>
                 </ol>
               </nav>
               <!-- /Breadcrumb -->
@@ -181,9 +181,6 @@
                   </tbody>
               </table>
               </div>
-              
-        </div>
-
      <!-- Modal -->
      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
