--- a/Projeto/constructorDetails.html
+++ b/Projeto/constructorDetails.html
@@ -74,10 +74,6 @@
                 <th class="col-md-2">Nationality</th>
                 <td class="col-md-10" data-bind="text: Nationality"></td>
             </tr>
-            <tr class="row" data-bind="visible: Drivers() != '' && Drivers() != null">
-                <th class="col-md-2">Drivers</th>
-                <td class="col-md-10" data-bind="text: Drivers"></td>
-            </tr>
             <tr class="row">
                 <th class="col-md-2">Learn More About <span data-bind="text: Name"></span></th>
                 <td class="col-md-10"><a class="text-muted text-decoration-none" data-bind="attr: {href: Url, target:'blank'}"><i class="fa fa-external-link"></i> [<span class="" data-bind="text: Url"></span>]</a></td>
@@ -90,28 +86,51 @@
             <thead class="bg-success text-light">
                 <tr>
                     <th scope="col">Id</th>
-                    <th scope="col">CircuitName</th>
-                    <th scope="col">Year</th>
                     <th scope="col">Name</th>
+                    <th scope="col">Nationality</th>
+                    <th scope="col">Image</th>
                     <th scope="col" class="text-right"></th>
                 </tr>
             </thead>
-            <tbody data-bind="foreach: Races">
+            <tbody data-bind="foreach: Drivers">
                 <tr>
-                    <td class="align-middle" data-bind="text:RaceId"></td>
-                    <td class="align-middle" data-bind="text:CircuitName"></td>
-                    <td class="align-middle" data-bind="text:Year"></td>
+                    <td class="align-middle" data-bind="text:DriverId"></td>
                     <td class="align-middle" data-bind="text:Name"></td>
+                    <td class="align-middle" data-bind="text:Nationality"></td>
+                    <td class="align-middle" data-bind="text:ImageUrl"></td>
                     <td class="text-end">
-                        <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./racesDetails.html?id=' + RaceId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
-                        <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + RaceId }" title="Selecione para adicionar aos favoritos"></i></button>
+                        <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./driverDetails.html?id=' + DriverId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
+                        <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + DriverId }" title="Selecione para adicionar aos favoritos"></i></button>
                     </td>
                 </tr>
             </tbody>
         </table>
-        <!-- /ko -->
+        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block;">
+                <thead class="bg-success text-light">
+                    <tr>
+                        <th scope="col">Id</th>
+                        <th scope="col">CircuitName</th>
+                        <th scope="col">Year</th>
+                        <th scope="col">Name</th>
+                        <th scope="col" class="text-right"></th>
+                    </tr>
+                </thead>
+                <tbody data-bind="foreach: Races">
+                    <tr>
+                        <td class="align-middle" data-bind="text:RaceId"></td>
+                        <td class="align-middle" data-bind="text:CircuitName"></td>
+                        <td class="align-middle" data-bind="text:Year"></td>
+                        <td class="align-middle" data-bind="text:Name"></td>
+                        <td class="text-end">
+                            <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./racesDetails.html?id=' + RaceId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
+                            <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + RaceId }" title="Selecione para adicionar aos favoritos"></i></button>
+                        </td>
+                    </tr>
+                </tbody>
+        </table>
+            <!-- /ko -->
 
-    </div>
+</div>
 
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
