--- a/Projeto/driverdetailsv2.html
+++ b/Projeto/driverdetailsv2.html
@@ -25,13 +25,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
-                    <li class="nav-item"> 
+                    <li class="nav-item">
                         <div class="dropdown">
-                        <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Constructors</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <li><a class="dropdown-item" href='constructors.html'>All constructors</a></li>
-                            <li><a class="dropdown-item" href="constructors2021.html">2021 Teams</a></li>
+                            <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Constructors</a>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <li><a class="dropdown-item" href='constructors.html'>All constructors</a></li>
+                                <li><a class="dropdown-item" href="constructors2021.html">2021 Teams</a></li>
                             </ul>
+                        </div>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html">Seasons</a></li>
                     <li class="nav-item">
@@ -51,147 +52,147 @@
     <div class="filler" style="width:100%;height:50px"></div>
     <div class="container">
         <div class="main-body">
-              <!-- Breadcrumb -->
-              <nav aria-label="breadcrumb" class="main-breadcrumb">
+            <!-- Breadcrumb -->
+            <nav aria-label="breadcrumb" class="main-breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                  <li class="breadcrumb-item"><a href="drivers.html">Drivers List</a></li>
-                  <li class="breadcrumb-item active" aria-current="page" data-bind="text: Name"></li>
+                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="drivers.html">Drivers List</a></li>
+                    <li class="breadcrumb-item active" aria-current="page" data-bind="text: Name"></li>
                 </ol>
-              </nav>
-              <!-- /Breadcrumb -->
-              <div class="row gutters-sm">
+            </nav>
+            <!-- /Breadcrumb -->
+            <div class="row gutters-sm">
                 <div class="col-md-4 mb-3">
-                  <div class="card">
-                    <div class="card-body">
-                      <div class="d-flex flex-column align-items-center text-center">
-                        <tr class="row" data-bind="visible: ImageUrl() != '' && ImageUrl() != null">
-                            <td class="col-md-10"><img style="width:200px;height:165px;" class="img-thumbnail col-2" data-bind="attr:{src: ImageUrl}" alt="Image not Available "></td>
-                        </tr>
-                        <div class="mt-3">
-                          <h4 style = "font-weight:bold" data-bind="text: Name"></h4>
-                          <!-- ko if: ImageUrl() != '' && ImageUrl() != 'null' -->
-                          <p><a data-bind="attr: { href: ImageUrl }">Image Url</a> </p>
-                          <!-- /ko -->
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex flex-column align-items-center text-center">
+                                <tr class="row" data-bind="visible: ImageUrl() != '' && ImageUrl() != null">
+                                    <td class="col-md-10"><img style="width:200px;height:165px;" class="img-thumbnail col-2" data-bind="attr:{src: ImageUrl}" alt="Image not Available "></td>
+                                </tr>
+                                <div class="mt-3">
+                                    <h4 style="font-weight:bold" data-bind="text: Name"></h4>
+                                    <!-- ko if: ImageUrl() != '' && ImageUrl() != 'null' -->
+                                    <p><a data-bind="attr: { href: ImageUrl }">Image Url</a> </p>
+                                    <!-- /ko -->
+                                </div>
+                            </div>
                         </div>
-                      </div>
                     </div>
-                  </div>
-                  <div class="card mt-3">
-                    <ul class="list-group list-group-flush">
-                      <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                        <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe mr-2 icon-inline"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>Wikipedia</h6>
-                        <span class="text-secondary"data-bind="text: Url"></span>
-                      </li>
-                    </ul>
-                  </div>
+                    <div class="card mt-3">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe mr-2 icon-inline"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>Wikipedia</h6>
+                                <span class="text-secondary" data-bind="text: Url"></span>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="col-md-8">
-                  <div class="card mb-3">
-                    <div class="card-body">
-                      <div class="row">
-                        <div class="col-sm-3">
-                          <h6 class="mb-0">Full Name</h6>
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Full Name</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary" data-bind="text: Name">
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Nickname</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary" data-bind="text: DriverRef">
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Driver ID</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary" data-bind="text: DriverId">
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Nationality</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary" data-bind="text: Nationality">
+                                </div>
+                            </div>
+                            <hr data-bind="visible: Number() != '' && Number() != null">
+                            <div class="row" data-bind="visible: Number() != '' && Number() != null">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Number</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary" data-bind="text: Number">
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Wins</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary" data-bind="text: Wins">
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Last Placement</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary" data-bind="text: LastPos">
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Races Done</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary" data-bind="text: Races().length">
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-sm-9 text-secondary" data-bind="text: Name">
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-3">
-                          <h6 class="mb-0">Nickname</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary" data-bind="text: DriverRef">
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-3">
-                          <h6 class="mb-0">Driver ID</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary" data-bind="text: DriverId">
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-3">
-                          <h6 class="mb-0">Nationality</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary" data-bind="text: Nationality">
-                        </div>
-                      </div>
-                      <hr data-bind="visible: Number() != '' && Number() != null" >
-                      <div class="row" data-bind="visible: Number() != '' && Number() != null">
-                        <div class="col-sm-3">
-                          <h6 class="mb-0">Number</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary" data-bind="text: Number">
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-3">
-                          <h6 class="mb-0">Wins</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary" data-bind="text: Wins">
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-3">
-                          <h6 class="mb-0">Last Placement</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary" data-bind="text: LastPos">
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-3">
-                          <h6 class="mb-0">Races Done</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary" data-bind="text: Races().length">
-                        </div>
-                      </div>
                     </div>
-                  </div>
-                    </div>
-                  </div>
                 </div>
-                <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block;">
-                  <thead class="bg-danger text-light">
-                      <tr>
-                          <th scope="col">Id</th>
-                          <th scope="col">CircuitName</th>
-                          <th scope="col">Year</th>
-                          <th scope="col">Name</th>
-                          <th scope="col" class="text-right"></th>
-                      </tr>
-                  </thead>
-                  <tbody data-bind="foreach: Races">
-                      <tr>
-                          <td class="align-middle" data-bind="text:RaceId"></td>
-                          <td class="align-middle" data-bind="text:CircuitName"></td>
-                          <td class="align-middle" data-bind="text:Year"></td>
-                          <td class="align-middle" data-bind="text:Name"></td>
-                          <td class="text-end">
-                              <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./racesDetails.html?id=' + RaceId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
-                              <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + RaceId }" title="Selecione para adicionar aos favoritos"></i></button>
-                          </td>
-                      </tr>
-                  </tbody>
-              </table>
-              </div>
-     <!-- Modal -->
-     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            </div>
+        </div>
+        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block;">
+            <thead class="bg-danger text-light">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">CircuitName</th>
+                    <th scope="col">Year</th>
+                    <th scope="col">Name</th>
+                    <th scope="col" class="text-right"></th>
+                </tr>
+            </thead>
+            <tbody data-bind="foreach: Races">
+                <tr>
+                    <td class="align-middle" data-bind="text:RaceId"></td>
+                    <td class="align-middle" data-bind="text:CircuitName"></td>
+                    <td class="align-middle" data-bind="text:Year"></td>
+                    <td class="align-middle" data-bind="text:Name"></td>
+                    <td class="text-end">
+                        <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./racesDetails.html?id=' + RaceId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
+                        <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + RaceId }" title="Selecione para adicionar aos favoritos"></i></button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header bg-dark text-light">
                     <h5 class="modal-title" id="exampleModalLabel">
-                        <img src="https://www.gqportugal.pt/media/pages/4472/full_F1.jpg" height="30" /> Loading data...
+                        <i class="fa fa-spin fa-3x fa-refresh"></i>                                                        Loading data...
+
                     </h5>
                 </div>
-                <div class="modal-body text-center">
-                    <i class="fa fa-spin fa-3x fa-refresh"></i>
+                <div class="modal-body text-center" style="background-image: url(https://www.gqportugal.pt/media/pages/4472/full_F1.jpg); background-position: center; background-size: cover; height: 100px;">
                 </div>
             </div>
         </div>
