--- a/Projeto/constructorDetails.html
+++ b/Projeto/constructorDetails.html
@@ -83,10 +83,13 @@
             </tr>
         </table>
         <br />
-        <div>
-            <h1>Drivers:</h1>
+        <div style="width: 50%; float: left;">
+            <h1>Drivers <i class="fa fa-user"></i></h1>
         </div>
-        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block;">
+        <div style="width: 50%; float: right;">
+            <h1>Races <i class="fa fa-flag-checkered"></i> </h1>
+        </div>
+        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; width: 30%; float: left;">
             <thead class="bg-success text-light">
                 <tr>
                     <th scope="col">Id</th>
@@ -109,36 +112,32 @@
                 </tr>
             </tbody>
         </table>
-        <br />
-        <div>
-            <h1>Races:</h1>
-        </div>
-        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block;">
-                <thead class="bg-success text-light">
-                    <tr>
-                        <th scope="col">Id</th>
-                        <th scope="col">CircuitName</th>
-                        <th scope="col">Year</th>
-                        <th scope="col">Name</th>
-                        <th scope="col" class="text-right"></th>
-                    </tr>
-                </thead>
-                <tbody data-bind="foreach: Races">
-                    <tr>
-                        <td class="align-middle" data-bind="text:RaceId"></td>
-                        <td class="align-middle" data-bind="text:CircuitName"></td>
-                        <td class="align-middle" data-bind="text:Year"></td>
-                        <td class="align-middle" data-bind="text:Name"></td>
-                        <td class="text-end">
-                            <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./racesDetails.html?id=' + RaceId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
-                            <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + RaceId }" title="Selecione para adicionar aos favoritos"></i></button>
-                        </td>
-                    </tr>
-                </tbody>
+        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; width: 50%; float: right;">
+            <thead class="bg-success text-light">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">CircuitName</th>
+                    <th scope="col">Year</th>
+                    <th scope="col">Name</th>
+                    <th scope="col" class="text-right"></th>
+                </tr>
+            </thead>
+            <tbody data-bind="foreach: Races">
+                <tr>
+                    <td class="align-middle" data-bind="text:RaceId"></td>
+                    <td class="align-middle" data-bind="text:CircuitName"></td>
+                    <td class="align-middle" data-bind="text:Year"></td>
+                    <td class="align-middle" data-bind="text:Name"></td>
+                    <td class="text-end">
+                        <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./racesDetails.html?id=' + RaceId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
+                        <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + RaceId }" title="Selecione para adicionar aos favoritos"></i></button>
+                    </td>
+                </tr>
+            </tbody>
         </table>
-            <!-- /ko -->
+        <!-- /ko -->
 
-</div>
+    </div>
 
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
