--- a/Projeto/driverdetailsv2.html
+++ b/Projeto/driverdetailsv2.html
@@ -158,7 +158,10 @@
                 </div>
             </div>
         </div>
-        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block;">
+        <div>
+            <h1>Races <i class="fa fa-flag-checkered"></i> </h1>
+        </div>
+        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; width: 50%; float: left;">
             <thead class="bg-danger text-light">
                 <tr>
                     <th scope="col">Id</th>
