--- a/Projeto/driverdetailsv2.html
+++ b/Projeto/driverdetailsv2.html
@@ -71,7 +71,7 @@
                                 </tr>
                                 <div class="mt-3">
                                     <h4 style="font-weight:bold" data-bind="text: Name"></h4>
-                                    <!-- ko if: ImageUrl() != '' && ImageUrl() != 'null' -->
+                                    <!-- ko if: ImageUrl() -->
                                     <p><a data-bind="attr: { href: ImageUrl }">Image Url</a> </p>
                                     <!-- /ko -->
                                 </div>
