--- a/Projeto/seasons.html
+++ b/Projeto/seasons.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
+<he<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>F1 Tracker</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
+    <link href="myCSS.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8" />
-    <title></title>
 </head>
 <body>
     <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
@@ -41,5 +48,8 @@
         </div>
     </nav>
     <div class="filler" style="width:100%;height:50px"></div>
+    <script src="../Scripts/bootstrap.bundle.min.js"></script>
+    <script src="../Scripts/knockout-3.5.1.js"></script>
+    <script src="../Scripts/jquery-3.6.0.min.js"></script>
 </body>
 </html>
