--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -71,6 +71,7 @@
                             <li><a class="dropdown-item" href='constructors.html'>All constructors</a></li>
                             <li><a class="dropdown-item" href="constructors2021.html">2021 Teams</a></li>
                             </ul>
+                        </div>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html">Seasons</a></li>
                     <li class="nav-item">
