--- a/Projeto/raceDetails.html
+++ b/Projeto/raceDetails.html
@@ -1,16 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>F1 Tracker - Circuits</title>
+    <title>F1 Tracker Constructor Details</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
-    <link href="myCSS.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <meta charset="utf-8" />
+    <link rel="stylesheet" href="myCSS.css" />
 </head>
 <body>
     <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
@@ -25,14 +25,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
-                    <li class="nav-item"> 
+                    <li class="nav-item">
                         <div class="dropdown">
-                        <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Constructors</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <li><a class="dropdown-item" href='constructors.html'>All constructors</a></li>
-                            <li><a class="dropdown-item" href="constructors2021.html">2021 Teams</a></li>
+                            <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Constructors</a>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <li><a class="dropdown-item" href='constructors.html'>All constructors</a></li>
+                                <li><a class="dropdown-item" href="constructors2021.html">2021 Teams</a></li>
                             </ul>
-                            </div>
+                        </div>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html">Seasons</a></li>
                     <li class="nav-item">
@@ -50,61 +50,78 @@
         </div>
     </nav>
     <div class="filler" style="width:100%;height:50px"></div>
+    <!-- Work Area-->
     <div class="container">
-        <div class="border-bottom pt-4 pb-2 mb-3">
-            <h2>Circuits List</h2>
+        <div class="py-2 mb-3">
+            <h2 data-bind="text:Name() +' ['+RaceId()+']'"></h2>
         </div>
-        <!-- ko if:records().length > 0 -->
-        <div class="row small">
-            <p class=" col-4 mr-auto pt-2">
-                <span data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
-                <span data-bind="html: 'Circuits: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
-            </p>
-            <button class="btn-fav btn-outline-success" style="width: 200px;height:30px;">Show Favorites</button> <!-- este botão tá uma real merda, tentar encostar isto à direita -->
-            <div class="col-8 my-0 pt-3">
-                <ul class="pagination float-end">
-                    <!-- ko if: currentPage() > 5 && totalPages() > 10 -->
-                    <li class="page-item float-end"><a class="page-link" title="First Page" data-bind="attr: { href: './circuits.html?page=' + '1',  rel:'prev'}">⇤</a></li>
-                    <li class="page-item float-end"><a class="page-link" title="Previous Page" data-bind="attr: { href: './circuits.html?page=' + previousPage(),  rel:'prev'}">←</a></li>
-                    <!-- /ko -->
-                    <!-- ko foreach: pageArray()-->
-                    <!-- ko if:$data == $parent.currentPage() -->
-                    <li class="active page-item"><a class="page-link" data-bind="attr: { title:'Current Page ' + $data }, text: $data"></a></li>
-                    <!-- /ko -->
-                    <!-- ko if:$data != $parent.currentPage() -->
-                    <li class="page-item"><a class="page-link" data-bind="attr: { href: './circuits.html?page=' + $data, title:'Goto Page ' + $data }, text:$data"></a></li>
-                    <!-- /ko -->
-                    <!-- /ko -->
-                    <!-- ko if: currentPage() < totalPages() - 4 && totalPages() > 9 -->
-                    <li class="page-item"><a class="page-link" title="Next Page" data-bind="attr: { href: './circuits.html?page=' + nextPage(), rel:'next' }">→</a></li>
-                    <li class="page-item"><a class="page-link" title="Last Page" data-bind="attr: { href: './circuits.html?page=' + totalPages() }">⇥</a></li>
-                    <!-- /ko -->
-                </ul>
-            </div>
+        <!--ko if:Name().length > 0 -->
+        <table class="table table-sm small">
+            <tr class="row">
+                <th class="col-md-2">Race Id</th>
+                <td class="col-md-10" data-bind="text: RaceId"></td>
+            </tr>
+            <tr class="row">
+                <th class="col-md-2">Name</th>
+                <td class="col-md-10" data-bind="text: Name"></td>
+            </tr>
+            <tr class="row">
+                <th class="col-md-2">Year</th>
+                <td class="col-md-10" data-bind="text: Year"></td>
+            </tr>
+            <tr class="row">
+                <th class="col-md-2">Circuit</th>
+                <td class="col-md-10" data-bind="text: Circuit"></td>
+            </tr>
+            <tr class="row">
+                <th class="col-md-2">Round</th>
+                <td class="col-md-10" data-bind="text: Round"></td>
+            <tr class="row">
+                <th class="col-md-2">Time</th>
+                <td class="col-md-10" data-bind="text: Time"></td>
+            </tr>
+            <tr class="row">
+                <th class="col-md-2">Learn More About <span data-bind="text: Name"></span></th>
+                <td class="col-md-10"><a class="text-muted text-decoration-none" data-bind="attr: {href: Url, target:'blank'}"><i class="fa fa-external-link"></i> [<span class="" data-bind="text: Url"></span>]</a></td>
+            </tr>
+        </table>
+        <!-- /ko-->
+        <br />
+        <div style="width: 50%; float: left;">
+            <h1>Results</h1>
         </div>
-
-        <!-- /ko -->
-        <table class="table table-striped table-sm small">
+        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; width: 80%;float: left;">
             <thead class="bg-success text-light">
                 <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Nationality</th>
+                    <th scope="col">DriverId</th>
+                    <th scope="col">DriverName</th>
+                    <th scope="col">ConstrucotrName</th>
+                    <th scope="col">Grid</th>
+                    <th scope="col">Position</th>
+                    <th scope="col">Rank</th>
+                    <th scope="col">Status</th>
                     <th scope="col" class="text-right"></th>
                 </tr>
             </thead>
-            <tbody data-bind="foreach: records">
+            <tbody data-bind="foreach: Drivers">
                 <tr>
-                    <td class="align-middle" data-bind="text:CircuitId"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="align-middle" data-bind="text:Country"></td>
+                    <td class="align-middle" data-bind="text:DriverId"></td>
+                    <td class="align-middle" data-bind="text:DriverName"></td>
+                    <td class="align-middle" data-bind="text:ConstructorName"></td>
+                    <td class="align-middle" data-bind="text:Grid"></td>
+                    <td class="align-middle" data-bind="text:Position"></td>
+                    <td class="align-middle" data-bind="text:Rank"></td>
+                    <td class="align-middle" data-bind="text:Status"></td>
+
                     <td class="text-end">
-                        <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./circuits.html?id=' + CircuitId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
-                        <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + CircuitId }" title="Selecione para adicionar aos favoritos"></i></button>
+                        <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./driverdetailsv2.html?id=' + DriverId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
+                        <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + DriverId }" title="Selecione para adicionar aos favoritos"></i></button>
                     </td>
                 </tr>
             </tbody>
         </table>
+
+
     </div>
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -121,10 +138,9 @@
             </div>
         </div>
     </div>
-    <!-- End of Working Area -->
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
-    <script src="circuits.js"></script>
+    <script src="raceDetails.js"></script>
 </body>
 </html>
