--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -55,9 +55,9 @@
     <!-- Working Area -->
     <div class="container col-lg-6 form-inline">
         <form action="">
-            <div class="forme-group input-group rounded">
+            <div class="form-group input-group rounded">
                 <input class="form-control me-2" placeholder="Search By Name" type="search" aria-label="Search" id="SearchText" style="height: 35px;" />
-                <button class="btn btn-outline-danger" id="button" style="height: 35px;" type="button">Search</button>
+                <button class="btn btn-outline-danger" id="button_search" style="height: 35px;" type="button">Search</button>
             </div>
         </form>
     </div>
