--- a/Projeto/seasons.html
+++ b/Projeto/seasons.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<he<meta charset="utf-8">
+<head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>F1 Tracker</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,6 +32,7 @@
                                 <li><a class="dropdown-item" href='constructors.html'>All constructors</a></li>
                                 <li><a class="dropdown-item" href="constructors2021.html">2021 Teams</a></li>
                             </ul>
+                            </div>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html">Seasons</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="races.html">Races</a></li>
@@ -61,6 +63,7 @@
               
               
             </div>
+                </div>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="card-link">Card link</a>
               <a href="#" class="card-link">Another link</a>
