--- a/Projeto/seasons.html
+++ b/Projeto/seasons.html
@@ -61,9 +61,7 @@
         <div class="card center text-center border-dark">
             <div class="card-body">
               <div class="card-title">
-                 <!-- <a href = "#">Previous</a>-->
-                <h1 class ="card-header" data-bind="text: displayYear"></h1>
-                <!--<a href = "#">Next</a>-->
+                <h1 class ="card-header bg-success" data-bind="text: displayYear"></h1>
                 <p class=" col-4 mr-auto pt-2">
                     <span style = "float:left;"data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
               </div>
