--- a/Projeto/legends.html
+++ b/Projeto/legends.html
@@ -51,22 +51,7 @@
 </div>         
             </div>
     </nav>
-    <div class="filler" style="width:100%;height:50px"></div>
-    <div class="filler" style="width:100%;height:50px"></div>
-    <div>
-        <p>.</p>
-        <p>.</p>
-        <p>.</p>
-        <p>.</p>
-        <p>.</p>
-        <p>.</p>
-        <p>.</p>
-        <p>.</p>
-        <p>.</p>
-        <p>.</p>
-        <p>.</p>
-        <p>.</p>
-    </div>
+    <div class="filler" style="width:100%;height:500px;"></div>
     <div class="accordion accordion-flush mx-auto d-block;" id="accordionFlushExample" style="width: 70%;">
         <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
