--- a/Projeto/tickets.html
+++ b/Projeto/tickets.html
@@ -51,10 +51,77 @@
             </div>
         </div>
     </nav>
+    <div class="filler" style="width:100%;height:70px"></div>
+    <div class='container'>
+        <form>
+            <div class="form-group col-md-6">
+                <label for="inputEmail">Email</label>
+                <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <br />
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputAddress">Address</label>
+                    <textarea type="text" class="form-control" id="inputAddress" placeholder="1234 Main St"></textarea>
+                    <small id="emailHelp" class="form-text text-muted">optional</small>
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="inputCity">City</label>
+                    <input type="text" class="form-control" id="inputCity">
+                    <small id="emailHelp" class="form-text text-muted">optional</small>
+                </div>
+                <div class="form-group col-md-2">
+                    <label for="inputZip">Zip</label>
+                    <input type="text" class="form-control" id="inputZip">
+                    <small id="emailHelp" class="form-text text-muted">optional.</small>
+                </div>
+            </div>
+            <br />
+            <div class="form-group col-md-6">
+                <label for="inputRace">Race</label>
+                <select id="inputRace" class="form-control">
+                    <option selected>Choose The Race</option>
+                    <option>uma delas</option>
+                    <option>uma delas</option>
+                    <option>uma delas</option>
+                    <option>uma delas</option>
+                </select>
+            </div>
+            <br />
+            <div class="form-row">
+                <label for="Positions">Positions</label>
+                <br />
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                    <label class="form-check-label" for="inlineRadio1">1</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                    <label class="form-check-label" for="inlineRadio2">2</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                    <label class="form-check-label" for="inlineRadio3">3</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                    <label class="form-check-label" for="inlineRadio2">4</label>
+                </div>
+            </div>
+            <br />
+            <p>People:</p>
+            <button id="update1" type="button">+</button>
+            <div id="counter">1</div>
+            <button id="update2" type="button">-</button>
+            <br />
+            <button type="submit" class="btn btn-primary">Buy Ticket</button>
+        </form>
+    </div>
 
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
-    <script src="circuits.js"></script>
+    <script src="tickets.js"></script>
 </body>
 </html>
